assets/static/css/login/styles.css
*{
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

body{
    height: 100vh;
    display: flex;
    align-items: center;
    justify-content: center;
}

#bg {
    background-repeat: no-repeat;
    background-position: top;
    background-size: 100% 100%;
    background-attachment: fixed;
}

.dim {
    position: absolute;
    background-color: #000;
    width: 100%;
    height: 100%;
    opacity: 50%;
}

/* forms */
.container{
    position: relative;
    max-width: 500px;
    width: 100%;
    border-radius: 5px;
    background: radial-gradient(
        40% 100% at 50% top,
        #3b3b3b, #1f1f1f
        );
    box-shadow: 0 0px 10px #0f0f0f;
    font-family: "Arial";
    overflow: hidden;
    margin: 0 20px;
}

.container .forms{
    display: flex;
    align-items: center;
    height: 440px;
}

.container .form{
    width: 100%;
    padding: 30px;
    background: radial-gradient(
        40% 100% at 50% top,
        #3b3b3b, #1f1f1f
        );
}

.container .signup{
    opacity: 0;
}
.container.active .signup{
    opacity: 1;
}

.container.active .forms{
    height: 680px;
}

/* title */
.container .form .title{
    color: #ff8800;
    background: -webkit-linear-gradient(#db7500, #ff8800);
    -webkit-background-clip: text;
    -webkit-text-fill-color: transparent;
    position: relative;
    display: flex;
    align-items: center;
    justify-content: center;
    font-size: 30px;
    padding: 10px;
    font-weight: 900;
    border-bottom: 1px solid;
    border-color: #fff;
}

/* input fields */
.form .input-field{
    position: relative;
    height: 50px;
    width: 100%;
    margin-top: 25px;
}

.input-field input{
    position: absolute;
    height: 100%;
    width: 100%;
    color: #e6e6e6;
    background: radial-gradient(
        30% 200% at 50% top,
        #616161, #353535
        );
    box-shadow: 0 3px 15px #1f1f1f;
    padding: 0 60px 0 45px;
    border: none;
    outline: none;
    font-size: 16px;
    font-weight: 600;
    border-top: 2px solid transparent;
}

.input-field input:is(:focus, :valid){
    border-bottom-color: #5233ff;
}

/* icons */
.input-field i{
    position: absolute;
    top: 8%;
    padding: 10px;
    color: #ff8800;
    font-size: 23px;
}

.input-field input:is(:focus, :valid) ~ i{
    color: #ff8800;
}

/* show hide password */
.input-field i.show-hide-pw{
    right: 0;
    cursor: pointer;
    padding: 10px;
}

/* error */
.error-icon {
    position: absolute;
    top: 25%;
    right: 4%;
    width: 25px;
    height: 25px;
    font-size: 20px;
    border-radius: 50px;
    align-items: center;
    justify-content: center;
    display: flex;
    color: #fff;
    background-color: #dd1d1d;
    cursor: pointer;
}

.error-text {
    opacity: 0;
    position: absolute;
    bottom: 100%;
    right: 3%;
    background-color: #dd1d1d;
    color: #fff;
    padding: 8px;
    border-radius: 3px;
    margin-top: 5px;
    font-size: 14px;
    transition: all .1s ease;
}

.error-text::after {
    content: "";
    position: absolute;
    top: 100%;
    left: 50%;
    margin-left: 48px;
    border-width: 8px;
    border-style: solid;
    border-color: #dd1d1d transparent transparent transparent;
}

.error-icon:hover ~ .error-text {
    opacity: 1;
}


.input-field:nth-child(5) .error-icon,
 .input-field:nth-child(6) .error-icon {
    right: 12%;
}

.input-field:nth-child(5) .error-text,
.input-field:nth-child(6) .error-text {
    right: 11%;
}

.container .form.login .input-field:nth-child(3) .error-icon {
    right: 12%;
}

.container .form.login .input-field:nth-child(3) .error-text {
    right: 11%;
}

.container .form.login .error-text::after {
    margin-left: 40px;
}

.input-field:nth-child(5) input, .input-field:nth-child(6) input {
    padding: 0 95px 0 45px;
}

/* checkbox */
.form .checkbox-text{
    display: flex;
    align-items: center;
    justify-content: space-between;
    margin-top: 20px;
}

.checkbox-text{
    display: flex;
    align-items: center;
}

.checkbox-content input{
    margin: 0 8px -2px 4px;
    accent-color: #ff8800;
}

/* not a member */
.form .text{
    color: #6e6e6e;
    font-size: 14px;
}

/* forgot password and sign up now text */
.form a.text{
    color: #ff8800;
    text-decoration: none;
}
.form a:hover{
    text-decoration: underline;
}

/* log/sign in button */
.form .button{
    margin-top: 35px;
}

.form .button input{
    border: none;
    color: #6e6e6e;
    font-size: 17px;
    font-weight: 600;
    padding: 0 45px;
    letter-spacing: 1px;
    border-radius: 4px;
    background-color: #494949;
    cursor: pointer;
}

.button input:hover{
    color: #e6e6e6;
    background: radial-gradient(
        30% 200% at 50% top,
        #ff8800, #ff8800);
}

.form .login-signup{
    margin-top: 30px;
    text-align: center;
}

/* change language section */
.languages {
    position: absolute;
    background: radial-gradient(
        45% 150% at 50% top,
        #464646, #1f1f1f
        );
    margin: 20px;
    padding: 0.2rem;
    width: 272.5px;
    height: 85.23px;
    right: 0px;
    bottom: 0px;
    align-items: center;
    text-align: center;
    justify-content: center;
    border-radius: 5px;
    box-shadow: 0 0px 10px #0f0f0f;
}

#american {
    position: relative;
    margin: 9.5px 7px;
    width: 42%;
    box-shadow: 0 5px 10px #0f0f0f;
    border-radius: 5px;
    transition: transform .1s;
}

#american:hover {
    transform: scale(1.05);
}

#croatian {
    position: relative;
    margin: 9.5px 7px;
    right: 0px;
    width: 42%;
    height: 74.65%;
    box-shadow: 0 5px 10px #0f0f0f;
    border-radius: 5px;
    transition: transform .1s;
}

#croatian:hover {
    transform: scale(1.05);
}

.tooltip {
    opacity: 0;
    width: 65%;
    height: 47.5%;
    background: radial-gradient(
        48% 200% at 50% bottom,
        #464646, #1f1f1f
        );
    color: #e6e6e6f3;
    text-align: center;
    font-family: Arial;
    font-size: 20px;
    font-weight: 600;
    box-shadow: 0 0px 10px #0f0f0f;
    display: flex;
    align-items: center;
    justify-content: center;
    border-radius: 2px;
    position: absolute;
    z-index: 1;
    bottom: 110%;
    cursor: default;
    transition: all .3s ease;
}

#eng {
    position: absolute;
    right: 118px;
}

#cro {
    position: absolute;
    right: -15px;
}

.tooltip::after {
    content: "";
    position: absolute;
    top: 100%;
    left: 50%;
    margin-left: -5px;
    border-width: 8px;
    border-style: solid;
    border-color: #464646 transparent transparent transparent;
}

#american:hover ~ #eng, #croatian:hover ~ #cro {
    opacity: 1;
    transform: translate(0, -30%);
  }

/* mobile languages */
@media(max-width:1095px) {
    .languages {
        position: relative;
        width: 220px;
        height: 70px;
        margin-bottom: 20px;
        margin-top: 30px;
    }

    #american {
        margin: 6px 5px;
    }

    #croatian {
        margin: 6px 5px; 
    }

    #american:hover ~ #eng, #croatian:hover ~ #cro {
        opacity: 0;
      }

    body {
        width: 100%;
        height: 120%;
        padding: 10px;
        display: flex;
        flex-direction: column;
    }

    .dim {
        height: 120%;
        width: 110%;
    }

    .container {
        width: 100%;
        margin-top: 15vh;
    }

    .container.active {
        width: 100%;
        margin-top: 30px;
    }
}

